force-app/main/default/objects/Non_Pickup_Framework__mdt/Non_Pickup_Framework__mdt.object-meta.xml
<CustomObject>
    <description>A framework to define which action to be performed on what condition for non pickup cases</description>
    <label>Non Pickup Framework</label>
    <pluralLabel>Non Pickup Frameworks</pluralLabel>
</CustomObject>