force-app/main/default/objects/Non_Pickup_Framework__mdt/fields/Consider_Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>Consider_Business_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consider Business Hours?</label>
    <type>Checkbox</type>
</CustomField>