force-app/main/default/objects/Non_Pickup_Framework__mdt/fields/Due_date_Time_Interval__c.field-meta.xml
<CustomField>
    <fullName>Due_date_Time_Interval__c</fullName>
    <label>Due date Time Interval</label>
    <length>255</length>
    <type>Text</type>
</CustomField>