force-app/main/default/objects/Non_Pickup_Framework__mdt/fields/No_of_Attempt__c.field-meta.xml
<CustomField>
    <fullName>No_of_Attempt__c</fullName>
    <label>No of Attempt</label>
    <length>18</length>
    <type>Text</type>
</CustomField>