force-app/main/default/objects/Non_Pickup_Framework__mdt/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <description>To store outcome value</description>
    <label>Outcome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>