force-app/main/default/objects/Non_Pickup_Framework__mdt/fields/Parameter__c.field-meta.xml
<CustomField>
    <fullName>Parameter__c</fullName>
    <description>It will either pass delay or next process name</description>
    <label>Parameter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>