force-app/main/default/objects/Non_Pickup_Framework__mdt/fields/Process_Name__c.field-meta.xml
<CustomField>
    <fullName>Process_Name__c</fullName>
    <description>To capture process name</description>
    <label>Process Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>