force-app/main/default/objects/Non_Pickup_Framework__mdt/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>To define source either case or task</description>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>