force-app/main/default/objects/Non_Pickup_Framework__mdt/listViews/Show_All.listView-meta.xml
<ListView>
    <fullName>Show_All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Description__c</columns>
    <columns>Next_Action__c</columns>
    <columns>No_of_Attempt__c</columns>
    <columns>Outcome__c</columns>
    <columns>Parameter__c</columns>
    <columns>Process_Name__c</columns>
    <columns>Sequence__c</columns>
    <columns>Service_Classification__c</columns>
    <columns>Source__c</columns>
    <filterScope>Everything</filterScope>
    <label>Show All</label>
</ListView>